Fixed overflow in body

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,6 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: var(--font-cinzel);
-  overflow: hidden;
 }
 
 /* Custom scrollbar for antique feel */
